// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the Header component renders the right nav elements for a guest 1`] = `
<header>
  <div
    className="header_layout"
  >
    <div
      className="container"
    >
      <div
        className="logo"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          to="/"
        >
          <img
            alt="VeraTech"
            height="42"
            src="test-file-stub"
            width="144"
          />
        </NavLink>
      </div>
      <div
        className="navigation"
      >
        <a
          className="nav_toggle"
          onClick={[Function]}
        >
          <span />
          <span />
          <span />
          <span />
        </a>
        <div
          className="menu-top-menu-container"
        >
          <ul
            className="menu"
            id="top-menu"
          >
            <li
              className="menu-item"
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                onClick={[Function]}
                to="/login"
              >
                Login
              </NavLink>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
            <li
              className="menu-item"
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                onClick={[Function]}
                to="/signup"
              >
                Register
              </NavLink>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Test the Header component renders the right nav elements for a logged in user 1`] = `
<header>
  <div
    className="header_layout"
  >
    <div
      className="container"
    >
      <div
        className="logo"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          to="/"
        >
          <img
            alt="VeraTech"
            height="42"
            src="test-file-stub"
            width="144"
          />
        </NavLink>
      </div>
      <div
        className="navigation"
      >
        <a
          className="nav_toggle"
          onClick={[Function]}
        >
          <span />
          <span />
          <span />
          <span />
        </a>
        <div
          className="menu-top-menu-container"
        >
          <ul
            className="menu"
            id="top-menu"
          >
            <li
              className="menu-item"
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                onClick={[Function]}
                to="/dashboard"
              >
                Dashboard
              </NavLink>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
            <li
              className="has-submenu"
            >
              <a
                id="request-menu-toggle"
                onClick={[Function]}
              >
                Requests
              </a>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
              <ul
                className="sub-menu"
              >
                <li
                  className="menu-item"
                >
                  <NavLink
                    activeClassName="active"
                    aria-current="page"
                    onClick={[Function]}
                    to="/requests/create"
                  >
                    Create a Request
                  </NavLink>
                  <span
                    className="arrow"
                  />
                  <div
                    className="clear"
                  />
                </li>
                <li
                  className="menu-item"
                >
                  <NavLink
                    activeClassName="active"
                    aria-current="page"
                    onClick={[Function]}
                    to="/requests"
                  >
                    View Requests
                  </NavLink>
                  <span
                    className="arrow"
                  />
                  <div
                    className="clear"
                  />
                </li>
              </ul>
            </li>
            <li
              className="menu-item"
            >
              <a
                className="buttons button_default"
                onClick={[Function]}
              >
                Logout
              </a>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Test the Header component renders the right nav elements for an admin 1`] = `
<header>
  <div
    className="header_layout"
  >
    <div
      className="container"
    >
      <div
        className="logo"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          to="/"
        >
          <img
            alt="VeraTech"
            height="42"
            src="test-file-stub"
            width="144"
          />
        </NavLink>
      </div>
      <div
        className="navigation"
      >
        <a
          className="nav_toggle"
          onClick={[Function]}
        >
          <span />
          <span />
          <span />
          <span />
        </a>
        <div
          className="menu-top-menu-container"
        >
          <ul
            className="menu"
            id="top-menu"
          >
            <li
              className="menu-item"
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                onClick={[Function]}
                to="/dashboard"
              >
                Dashboard
              </NavLink>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
            <li
              className="has-submenu"
            >
              <a
                id="request-menu-toggle"
                onClick={[Function]}
              >
                Requests
              </a>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
              <ul
                className="sub-menu"
              >
                <li
                  className="menu-item"
                >
                  <NavLink
                    activeClassName="active"
                    aria-current="page"
                    onClick={[Function]}
                    to="/requests/create"
                  >
                    Create a Request
                  </NavLink>
                  <span
                    className="arrow"
                  />
                  <div
                    className="clear"
                  />
                </li>
                <li
                  className="menu-item"
                >
                  <NavLink
                    activeClassName="active"
                    aria-current="page"
                    onClick={[Function]}
                    to="/requests"
                  >
                    View Requests
                  </NavLink>
                  <span
                    className="arrow"
                  />
                  <div
                    className="clear"
                  />
                </li>
              </ul>
            </li>
            <li
              className="menu-item"
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                onClick={[Function]}
                to="/admin"
              >
                Admin Page
              </NavLink>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
            <li
              className="menu-item"
            >
              <a
                className="buttons button_default"
                onClick={[Function]}
              >
                Logout
              </a>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</header>
`;

exports[`Test the Header component renders without crashing 1`] = `
<header>
  <div
    className="header_layout"
  >
    <div
      className="container"
    >
      <div
        className="logo"
      >
        <NavLink
          activeClassName="active"
          aria-current="page"
          to="/"
        >
          <img
            alt="VeraTech"
            height="42"
            src="test-file-stub"
            width="144"
          />
        </NavLink>
      </div>
      <div
        className="navigation"
      >
        <a
          className="nav_toggle"
          onClick={[Function]}
        >
          <span />
          <span />
          <span />
          <span />
        </a>
        <div
          className="menu-top-menu-container"
        >
          <ul
            className="menu"
            id="top-menu"
          >
            <li
              className="menu-item"
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                onClick={[Function]}
                to="/login"
              >
                Login
              </NavLink>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
            <li
              className="menu-item"
            >
              <NavLink
                activeClassName="active"
                aria-current="page"
                onClick={[Function]}
                to="/signup"
              >
                Register
              </NavLink>
              <span
                className="arrow"
              />
              <div
                className="clear"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</header>
`;
